--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -1,7 +1,9 @@
 <div>
-    <div *ngFor="let row of map">
-        <span *ngFor="let cell of row" [ngClass]="{left: cell[0].left, right: cell[0].right, up: cell[0].up, down: cell[0].down}">
-          cell
-        </span>
-    </div>
+    <md-grid-list cols="{{columns}}" rowHeight="80px">
+        <div *ngFor="let row of map">
+            <!--<span >-->
+                  <md-grid-tile *ngFor="let cell of row" [ngClass]="{'leftBorder': !cell[0].left, 'rightBorder': !cell[0].right, 'topBorder': !cell[0].up, 'bottomBorder': !cell[0].down}" [colspan]="1" [rowspan]="1" [style.background]="'lightblue'">cell</md-grid-tile>
+            <!--</span>-->
+        </div>
+    </md-grid-list>
 </div>
