--- a/src/app/maze-generator/maze-generator.component.css
+++ b/src/app/maze-generator/maze-generator.component.css
@@ -1,24 +1,53 @@
-.leftBorder {
-    border-left: 3px solid #000
-}
-
-.rightBorder {
-    border-right: 3px solid #000
-}
-
-.topBorder {
-    border-top: 3px solid #000
-}
-
-.bottomBorder {
-    border-bottom: 3px solid #000
-}
-
 md-grid-tile {
-    border: 3px solid #ADD8E6;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    background-color: white!important;
+}
+
+md-grid-tile::after,
+md-grid-tile::before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: 0;
+    padding: 0;
+    animation: draw 1.5s 1s forwards
 }
 
 md-grid-list {
     height: 95vh;
     margin: 0;
+}
+
+.rightBorder::before {
+    border-right: 3px solid #4267B2;
+    right: 0;
+}
+
+.leftBorder::after {
+    border-left: 3px solid #4267B2;
+    left: 0;
+}
+
+.bottomBorder::after {
+    border-bottom: 3px solid #4267B2;
+    bottom: 0;
+}
+
+.topBorder::before {
+    border-top: 3px solid #4267B2;
+    top: 0;
+}
+
+@keyframes draw {
+    froom {
+        width: 0%;
+        height: 0%;
+    }
+    to {
+        width: 100%;
+        height: 100%
+    }
 }
