--- a/src/app/maze-generator/maze-generator.component.css
+++ b/src/app/maze-generator/maze-generator.component.css
@@ -9,11 +9,11 @@ md-grid-tile::after,
 md-grid-tile::before {
     content: "";
     position: absolute;
-    width: 1px;
-    height: 1px;
+    width: 0px;
+    height: 0px;
     margin: 0;
     padding: 0;
-    animation: draw 1.5s 1s forwards
+    animation: draw 1.2s 1s forwards
 }
 
 md-grid-list {
@@ -42,7 +42,7 @@ md-grid-list {
 }
 
 @keyframes draw {
-    froom {
+    from {
         width: 0%;
         height: 0%;
     }
