--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -1,9 +1,7 @@
 <div>
     <md-grid-list cols="{{columns}}" rowHeight="fit">
         <div *ngFor="let row of map">
-            <!--<span >-->
-            <md-grid-tile *ngFor="let cell of row" [ngClass]="{ 'leftBorder': !cell[0].left, 'rightBorder': !cell[0].right, 'topBorder': !cell[0].up, 'bottomBorder': !cell[0].down}" [colspan]="1" [rowspan]="1" [style.background]="'lightblue'">cell</md-grid-tile>
-            <!--</span>-->
+            <app-cell *ngFor="let cell of row" [cell]="cell[0]"></app-cell>
         </div>
     </md-grid-list>
 </div>
