--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -1,1 +1,1 @@
-<md-grid-tile [ngClass]="{ 'leftBorder': !cell.left, 'rightBorder': !cell.right, 'topBorder': !cell.up, 'bottomBorder': !cell.down}" [colspan]="1" [rowspan]="1">cell</md-grid-tile>
+<div [ngClass]="{ 'cell':true, 'leftBorder': !cell.left, 'rightBorder': !cell.right, 'topBorder': !cell.up, 'bottomBorder': !cell.down}">cell</div>
