--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -1,7 +1,9 @@
 <div>
     <md-grid-list cols="{{columns}}" rowHeight="fit">
         <div *ngFor="let row of map">
-            <app-cell *ngFor="let cell of row" [cell]="cell[0]"></app-cell>
+            <md-grid-tile *ngFor="let cell of row" [colspan]="1" [rowspan]="1">
+                <app-cell [cell]="cell[0]"></app-cell>
+            </md-grid-tile>
         </div>
     </md-grid-list>
 </div>
