--- a/src/app/cell/cell.component.css
+++ b/src/app/cell/cell.component.css
@@ -2,8 +2,6 @@
     margin: 0;
     border: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
     background-color: white!important;
 }
 
@@ -16,6 +14,10 @@
     margin: 0;
     padding: 0;
     animation: draw 1.2s 1s forwards
+}
+
+.cell::after {
+    left: 0;
 }
 
 .rightBorder::before {
