--- a/src/app/cell/cell.component.css
+++ b/src/app/cell/cell.component.css
@@ -3,6 +3,9 @@
     border: 0;
     padding: 0;
     background-color: white!important;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 .cell::after,
