Avatar movement tuned

--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -2,10 +2,10 @@
     <md-grid-list cols="{{columns}}" rowHeight="fit">
         <div *ngFor="let row of map">
             <!--<span >-->
-            <md-grid-tile #grid *ngFor="let cell of row" [ngClass]="{ 'leftBorder': !cell[0].left, 'rightBorder': !cell[0].right, 'topBorder': !cell[0].up, 'bottomBorder': !cell[0].down}" [colspan]="1" [rowspan]="1" [style.background]="'lightblue'">cell</md-grid-tile>
+            <md-grid-tile #grid *ngFor="let cell of row" [ngClass]="{ 'leftBorder': !cell[0].left, 'rightBorder': !cell[0].right, 'topBorder': !cell[0].up, 'bottomBorder': !cell[0].down}"
+                [colspan]="1" [rowspan]="1" [style.background]="'lightblue'">cell</md-grid-tile>
             <!--</span>-->
         </div>
     </md-grid-list>
-        <app-avatar [size]="stylesObj" ></app-avatar>
-
+        <app-avatar class=".playerAvatar" #avatar></app-avatar>
 </div>
