--- a/src/app/cell/cell.component.css
+++ b/src/app/cell/cell.component.css
@@ -2,10 +2,12 @@
     margin: 0;
     border: 0;
     padding: 0;
-    background-color: white!important;
+    width: 100%;
+    height: 100%;
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
+    background-color: white!important;
 }
 
 .cell::after,
