avatar transition animation avatar size adjustments

--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -1,3 +1,8 @@
-.playerAvatar{
-    transform: translate(0px,0px);
+.playerAvatar {
+    transform: translate(0px, 0px);
+    transition: transform 1s ease-in;
+}
+
+:host {
+    background-color: red;
 }
