--- a/src/app/avatar/avatar.component.html
+++ b/src/app/avatar/avatar.component.html
@@ -1,1 +1,1 @@
-<img class="playerAvatar" src="http://errietta.me/stickman.png" id="stickman" style="position:absolute;top:0px;left:0px" />hey
+<img class="playerAvatar" src="http://piq.codeus.net/static/media/userpics/piq_18090_400x400.png" id="stickman" style="position:absolute;top:0px;left:0px" />hey
