--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -6,5 +6,5 @@
             </md-grid-tile>
         </div>
     </md-grid-list>
-    <app-avatar class=".playerAvatar" #avatar></app-avatar>
+    <app-avatar [map]="map" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
 </div>
