--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -1,8 +1,12 @@
 .playerAvatar {
-    transform: translate(0px, 0px);
-    transition: transform 1s ease-in;
+    width: 100%;
+    height: 100%;
 }
 
 :host {
-    background-color: red;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    transform: translate(0px, 0px);
+    transition: transform 1s ease-in;
 }
