--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -1,10 +1,10 @@
 <div>
-    <md-grid-list cols="{{columns}}" rowHeight="fit">
+    <md-grid-list #grid cols="{{columns}}" rowHeight="fit">
         <div *ngFor="let row of map">
-            <md-grid-tile #grid *ngFor="let cell of row" [colspan]="1" [rowspan]="1">
+            <md-grid-tile #gridItem *ngFor="let cell of row" [colspan]="1" [rowspan]="1">
                 <app-cell [cell]="cell[0]"></app-cell>
             </md-grid-tile>
         </div>
     </md-grid-list>
-    <app-avatar [map]="map" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
+    <app-avatar [map]="map" [gridLocation]="gridLocation" [startPosition]="startPosition" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
 </div>
