--- a/src/app/avatar/avatar.component.html
+++ b/src/app/avatar/avatar.component.html
@@ -1,1 +1,1 @@
-<img class="playerAvatar" src="http://piq.codeus.net/static/media/userpics/piq_18090_400x400.png" id="stickman" />
+<img class="playerAvatar" src="https://upload.wikimedia.org/wikipedia/en/d/d3/Shy_Guy_%28Mario%29.png" id="stickman" />
