--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -7,4 +7,5 @@
         </div>
     </md-grid-list>
     <app-avatar [map]="map" [gridLocation]="gridLocation" [startPosition]="startPosition" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
+    <app-avatar-controller [move]="avatar.move"></app-avatar-controller>
 </div>
