--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -1,3 +1,3 @@
 <div [ngClass]="{ 'cell':true, 'leftBorder': !cell.left, 'rightBorder': !cell.right, 'topBorder': !cell.up, 'bottomBorder': !cell.down}">
-    <div class="collectable" *ngIf="cell.hasCollectable"> cell</div>
+    <div class="collectable" *ngIf="cell.hasCollectable"> {{indexX}} : {{indexY}}</div>
 </div>
