Avatar animation fully functional

--- a/src/app/avatar/avatar.component.html
+++ b/src/app/avatar/avatar.component.html
@@ -1,1 +1,2 @@
-<img class="playerAvatar" src="https://upload.wikimedia.org/wikipedia/en/d/d3/Shy_Guy_%28Mario%29.png" id="stickman" />
+<div [@shakeyshakey]="isShakey"  (@shakeyshakey.done)="onDone(event)"> <img class="playerAvatar" [src]="imgSource" id="stickman" />
+</div>
