solver is working but promise needs to be adjusted

--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -6,6 +6,6 @@
             </md-grid-tile>
         </div>
     </md-grid-list>
-    <app-avatar [map]="map" [gridLocation]="gridLocation" [startPosition]="startPosition" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
+    <app-avatar [solution]="this.solution" [map]="map" [gridLocation]="gridLocation" [startPosition]="startPosition" [style.width.px]="dimensions" [style.height.px]="dimensions" class="playerAvatar" #avatar></app-avatar>
     <app-avatar-controller [move]="avatar.move"></app-avatar-controller>
 </div>
