--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -9,25 +9,30 @@
     left: 0px;
     transform: translate(0px, 0px);
     transition: transform 0.5s ease-in;
+      /*transform: scale(0.5);*/
+  /*background-image:url(mariopause.png);*/
+  /*background-position-x:0px;*/
+  /*background-size: 100%;*/
+    /*height:88px;*/
+  /*width:44px;*/
 }
 
-.shake{
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
+.lookLeft{
+  transform: rotateY(180deg);
 }
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.mario{
+  /*position:absolute;*/
+  /*bottom:55px;*/
+  /*left:50%;*/
+  /*transform: scale(0.5);*/
+  background-image:url(../../assets/mariopause.png);
+  background-position-x:0px;
+  /*background-size: 90%;*/
+  height:88px;
+  width:44px;
+  /*animation:walk .5s steps(1, end) infinite;*/
+  /*-webkit-animation:walk .5s steps(1, end) infinite;*/
+  /*-webkit-animation-play-state: paused;*/
+  /*animation-play-state: paused;*/
 }
+
