--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -1,14 +1,20 @@
 .playerAvatar {
-    width: 100%;
-    height: 100%;
+    /*width: 100%;
+    height: 100%;*/
 }
 
 :host {
+
+    /*height: 50px;
+    width: 50px;*/
     position: absolute;
     top: 0px;
     left: 0px;
     transform: translate(0px, 0px);
     transition: transform 0.5s ease-in;
+    text-align: center;
+      /*background-image:url(../../assets/mariopause.png);*/
+
       /*transform: scale(0.5);*/
   /*background-image:url(mariopause.png);*/
   /*background-position-x:0px;*/
@@ -21,18 +27,16 @@
   transform: rotateY(180deg);
 }
 .mario{
-  /*position:absolute;*/
-  /*bottom:55px;*/
-  /*left:50%;*/
-  /*transform: scale(0.5);*/
+ height:100%;
+ width:100%;
+}
+
+.mario{
+  /*position:relative;*/
   background-image:url(../../assets/mariopause.png);
-  background-position-x:0px;
-  /*background-size: 90%;*/
-  height:88px;
-  width:44px;
-  /*animation:walk .5s steps(1, end) infinite;*/
-  /*-webkit-animation:walk .5s steps(1, end) infinite;*/
-  /*-webkit-animation-play-state: paused;*/
-  /*animation-play-state: paused;*/
+  background-size: cover;
+  /*height:100%;
+  width:100%;*/
+
 }
 
