--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -4,7 +4,6 @@
 }
 
 :host {
-
     /*height: 50px;
     width: 50px;*/
     position: absolute;
@@ -13,30 +12,29 @@
     transform: translate(0px, 0px);
     transition: transform 0.5s ease-in;
     text-align: center;
-      /*background-image:url(../../assets/mariopause.png);*/
-
-      /*transform: scale(0.5);*/
-  /*background-image:url(mariopause.png);*/
-  /*background-position-x:0px;*/
-  /*background-size: 100%;*/
+    /*background-image:url(../../assets/mariopause.png);*/
+    /*transform: scale(0.5);*/
+    /*background-image:url(mariopause.png);*/
+    /*background-position-x:0px;*/
+    /*background-size: 100%;*/
     /*height:88px;*/
-  /*width:44px;*/
+    /*width:44px;*/
 }
 
-.lookLeft{
-  transform: rotateY(180deg);
-}
-.mario{
- height:100%;
- width:100%;
+.lookLeft {
+    transform: rotateY(180deg);
 }
 
-.mario{
-  /*position:relative;*/
-  background-image:url(../../assets/mariopause.png);
-  background-size: cover;
-  /*height:100%;
-  width:100%;*/
-
+.mario {
+    /*position:relative;*/
+    background-image: url(../../assets/mariopause.png);
+    background-size: contain;
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
 }
 
+.shaky {
+    height: 100%;
+    width: 100%;
+}
