--- a/src/app/avatar/avatar.component.html
+++ b/src/app/avatar/avatar.component.html
@@ -1,3 +1,3 @@
-<div [@shakeyshakey]="isShakey" (@shakeyshakey.done)="onDone(event)" >
+<div [ngClass]="{shaky: true}" [@shakeyshakey]="isShakey" (@shakeyshakey.done)="onDone(event)">
     <div [@whereChuGoing]="whereTo" (@whereChuGoing.done)="whereDone(event)" [ngClass]="{'mario':true, 'lookLeft':lookingLeft}"></div>
 </div>
