--- a/src/app/avatar/avatar.component.css
+++ b/src/app/avatar/avatar.component.css
@@ -1,24 +1,12 @@
-.playerAvatar {
-    /*width: 100%;
-    height: 100%;*/
-}
-
 :host {
-    /*height: 50px;
-    width: 50px;*/
+
     position: absolute;
     top: 0px;
     left: 0px;
     transform: translate(0px, 0px);
-    transition: transform 0.5s ease-in;
+    transition: transform 0.8s ease-in;
     text-align: center;
-    /*background-image:url(../../assets/mariopause.png);*/
-    /*transform: scale(0.5);*/
-    /*background-image:url(mariopause.png);*/
-    /*background-position-x:0px;*/
-    /*background-size: 100%;*/
-    /*height:88px;*/
-    /*width:44px;*/
+
 }
 
 .lookLeft {
@@ -26,9 +14,9 @@
 }
 
 .mario {
-    /*position:relative;*/
     background-image: url(../../assets/mariopause.png);
     background-size: contain;
+    background-position: center;
     height: 100%;
     width: 100%;
     background-repeat: no-repeat;
