--- a/src/app/avatar-controller/avatar-controller.component.css
+++ b/src/app/avatar-controller/avatar-controller.component.css
@@ -1,9 +1,9 @@
 :host {
-    position: absolute;
     right: 0;
     bottom: 0;
     width: 100%;
     display: flex;
+    align-self: flex-end;
     justify-content: space-around;
 }
 
