--- a/src/app/maze-generator/maze-generator.component.css
+++ b/src/app/maze-generator/maze-generator.component.css
@@ -1,7 +1,7 @@
 md-grid-list {
-    height: 95vh;
     margin: 0;
     padding: 0;
+    flex-grow: 2;
 }
 
 app-cell {
@@ -9,6 +9,22 @@ app-cell {
     height: 100%;
 }
 
-:host{
-    touch-action:manipulation;
+.componentsWrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+:host {
+    touch-action: manipulation;
+    height: 100%;
+}
+
+.example-icon {
+    padding: 0 14px;
+}
+
+.mat-raised-button {
+    background-color: #00BCD4;
+    color: white;
 }
