--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    margin: 1px;
+    padding: 0;
+    height: calc(100vh - 2px);
+    overflow: hidden;
+}
+
+app-root {
+    height: 100%;
+}
+
+md-toolbar-row {
+    justify-content: space-between;
+}
+
+md-toolbar {
+    padding: 0;
+    background-color: #F2F2F2;
+}
+
+.loader {
+    position: fixed;
+    /* or absolute */
+    top: 50%;
+    left: 50%;
+    width: 250px;
+    height: 250px;
+    margin-top: -125px;
+    margin-left: -125px;
+    animation: 5s rotate linear infinite;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg)
+    }
+    to {
+        transform: rotate(360deg)
+    }
+}
