--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -2,7 +2,7 @@
     <md-toolbar>
         <div><i class="material-icons">view_quilt</i><span>Mario Maze</span></div>
         <div><i class="material-icons ">face</i><span>collectables:</span> <span>{{this.startPosition.collectables}}</span></div>
-        <a md-raised-button> <i class="material-icons ">lightbulb_outline</i> solve</a>
+        <a (click)="openDialog()" md-raised-button> <i class="material-icons ">lightbulb_outline</i> solve</a>
     </md-toolbar>
     <md-grid-list #grid cols="{{columns}}" rowHeight="fit">
         <div *ngFor="let row of map; let i = index">
