fix z-index problem add font and remove overlay styling

--- a/src/app/dialog-content/dialog-content.component.html
+++ b/src/app/dialog-content/dialog-content.component.html
@@ -12,7 +12,7 @@
         <div class="dialogContainer bigger">
             <p class="dialogText">
                 Use the arrow keys to navigate <img class="img" src="https://s3.amazonaws.com/frt-prod/cms/files/files/000/000/069/original/Mario_Pixeles.png" /> through the <i class="red">MAZE</i> and collect all the<img class="img" src="https://vignette2.wikia.nocookie.net/mario/images/a/a6/Super_Mushroom_Artwork_-_Super_Mario_3D_World.png/revision/latest?cb=20131217032455"
-                /> with the <i class="red"> Minimum</i> number of steps
+                /> with <i class="red"> MINIMUM</i> number of steps
             </p>
         </div>
     </div>
