--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,11 @@ md-toolbar {
     text-align: center;
 }
 
+.red {
+    color: red;
+    font-weight: bold;
+}
+
 @media only screen and (max-width:1200px) {
     .mat-dialog-container {
         width: 100vw!important;
