--- a/src/app/maze-generator/maze-generator.component.html
+++ b/src/app/maze-generator/maze-generator.component.html
@@ -2,8 +2,8 @@
     <md-grid-list #grid cols="{{columns}}" rowHeight="fit">
 
         <div *ngFor="let row of map; let i = index">
-            <md-grid-tile #gridItem *ngFor="let cell of row; let j = index" [colspan]="1" [rowspan]="1">
-                <app-cell [cell]="cell[0]" [indexX]="i" [indexY]="j"></app-cell>
+            <md-grid-tile #gridItem *ngFor="let cell of row">
+                <app-cell [cell]="cell[0]"></app-cell>
             </md-grid-tile>
 
         </div>
