--- a/src/app/dialog-content/dialog-content.component.html
+++ b/src/app/dialog-content/dialog-content.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!data; else gameOverTemp" class="dialogContainer full">
+<div *ngIf="data; else gameOverTemp" class="dialogContainer full">
     <h1>Welcome to Mario Maze {{data}}</h1>
     <div class="row">
         <div class="dialogContainer">
