--- a/src/app/dialog-content/dialog-content.component.html
+++ b/src/app/dialog-content/dialog-content.component.html
@@ -3,19 +3,28 @@
         <h1>Welcome to Mario Maze</h1>
     </div>
     <div md-dialog-content>
-        <div class="dialogContainer">
+        <div class="row">
 
-            <div class="row">
-                <i class="material-icons up">keyboard_arrow_up</i>
-                <div class="row2">
+            <div class="dialogContainer">
+
+                <div class="row">
+                    <i class="material-icons up">keyboard_arrow_up</i>
+                </div>
+                <div class="row">
+
                     <i class="material-icons ">keyboard_arrow_left</i>
                     <i class="material-icons ">keyboard_arrow_right</i>
                 </div>
-                <i class="material-icons down">keyboard_arrow_down</i>
+                <div class="row">
+
+                    <i class="material-icons down">keyboard_arrow_down</i>
+                </div>
             </div>
+
             <div class="dialogContainer bigger">
                 <p class="dialogText">
-                    Use the arrow keys to navigate <img class="img" src="../../assets/mariopause.png" /> through the <b class="red">MAZE</b>                    and collect all the <img class="img" src="https://vignette2.wikia.nocookie.net/mario/images/a/a6/Super_Mushroom_Artwork_-_Super_Mario_3D_World.png/revision/latest?cb=20131217032455"
+                    Use the arrow keys to navigate <img class="img" src="../../assets/mariopause.png" /> through the
+                    <b class="red">MAZE</b> and collect all the <img class="img" src="https://vignette2.wikia.nocookie.net/mario/images/a/a6/Super_Mushroom_Artwork_-_Super_Mario_3D_World.png/revision/latest?cb=20131217032455"
                     /> with <b class="red"> MINIMUM</b> number of steps
                 </p>
             </div>
