--- a/src/app/dialog-content/dialog-content.component.html
+++ b/src/app/dialog-content/dialog-content.component.html
@@ -10,8 +10,7 @@
                 <div class="row">
                     <i class="material-icons up">keyboard_arrow_up</i>
                 </div>
-                <div class="row">
-
+                <div class="row2">
                     <i class="material-icons ">keyboard_arrow_left</i>
                     <i class="material-icons ">keyboard_arrow_right</i>
                 </div>
