--- a/src/app/dialog-content/dialog-content.component.html
+++ b/src/app/dialog-content/dialog-content.component.html
@@ -23,7 +23,7 @@
             <div class="dialogContainer bigger">
                 <p class="dialogText">
                     Use the arrow keys to navigate <img class="img" src="../../assets/mariopause.png" /> through the
-                    <b class="red">MAZE</b> and collect all the <img class="img" src="https://vignette2.wikia.nocookie.net/mario/images/a/a6/Super_Mushroom_Artwork_-_Super_Mario_3D_World.png/revision/latest?cb=20131217032455"
+                    <b class="red">MAZE</b> and collect all the <img class="img" src="../../assets/mario-bros-mushroom-vector.png"
                     /> with <b class="red"> MINIMUM</b> number of steps
                 </p>
             </div>
