--- a/src/app/dialog-content/dialog-content.component.css
+++ b/src/app/dialog-content/dialog-content.component.css
@@ -41,9 +41,36 @@
     justify-content: space-around;
 }
 
+.marquee{
+    width: 450px;
+	line-height: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.marquee h1 {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 3s linear infinite;
+}
+.marquee p {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 3s 1s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+
+}
+
 .img {
     width: 40px;
     height: 40px;
+}
+.imgLg{
+    width: 100px;
+    height: 100px;
 }
 
 .full {
@@ -54,6 +81,7 @@
 .veryBig {
     font-size: 150px;
 }
+
 
 @media only screen and (max-width:1000px) {
     .row {
